<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".AlarmActivity">

    <NumberPicker
        android:id="@+id/numberpickerminute"
        android:layout_width="80dp"
        android:layout_height="194dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <NumberPicker
        android:id="@+id/numberpickersecond"
        android:layout_width="80dp"
        android:layout_height="194dp"
        android:layout_marginBottom="32dp"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minute"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/countdownstart"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:text="@string/ok"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/countdownreset"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/Timer"
        android:layout_width="408dp"
        android:layout_height="154dp"
        android:text="00:00.00"
        android:textAlignment="center"
        android:textSize="90sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.481" />

    <NumberPicker
        android:id="@+id/numberpickerset"
        android:layout_width="80dp"
        android:layout_height="194dp"
        android:layout_marginBottom="32dp"
        android:theme="@style/NumberPickerText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/second"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/second"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberpickersecond"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/countdownreset"
        android:layout_width="140dp"
        android:layout_height="64dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="40dp"
        android:clickable="false"
        android:text="@string/countdownReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Timer" />

    <TextView
        android:id="@+id/minute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/minute"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberpickerminute"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/set"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/numberpickerset"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/timertitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervalmessage"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/joutai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervaljoutai1"
        android:textSize="25sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.238" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="50"
        android:text="@string/credit"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/keikoku"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/intervaltyuui"
        android:textColor="@android:color/holo_red_light"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="invisible" />


</androidx.constraintlayout.widget.ConstraintLayout>