<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkingActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AlarmActivity">

        <TextView
            android:id="@+id/keikoku"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="85dp"
            android:text="@string/intervaltyuui"
            android:textColor="@android:color/holo_red_light"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            tools:visibility="invisible" />

        <Button
            android:id="@+id/countdownstart"
            android:layout_width="140dp"
            android:layout_height="64dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="40dp"
            android:text="@string/countdownStart"
            android:visibility="visible"
            app:layout_constraintStart_toEndOf="@+id/countdownreset"
            app:layout_constraintTop_toBottomOf="@+id/hosuu" />


        <TextView
            android:id="@+id/countdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/hosuu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="25dp"
            android:textSize="50sp"
            android:visibility="invisible"
            android:gravity="center"
            android:text="00:00"/>

        <TextView
            android:id="@+id/hosuu"
            android:layout_width="408dp"
            android:layout_height="154dp"
            android:text="歩"
            android:textAlignment="center"
            android:textSize="90sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.481" />

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <NumberPicker
                android:id="@+id/numberpickerhour"
                android:layout_width="84dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="32dp"
                android:theme="@style/NumberPickerText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/hour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/hour"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberpickerhour"
                app:layout_constraintTop_toTopOf="parent" />

            <NumberPicker
                android:id="@+id/numberpickerminute"
                android:layout_width="84dp"
                android:layout_height="194dp"
                android:layout_gravity="center"
                android:layout_marginStart="6dp"
                android:layout_marginBottom="32dp"
                android:theme="@style/NumberPickerText"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/hour"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp"
                android:text="@string/minute"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/numberpickerminute"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>



        <Button
            android:id="@+id/countdownreset"
            android:layout_width="140dp"
            android:layout_height="64dp"
            android:layout_marginTop="40dp"
            android:text="@string/countdownReset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hosuu" />

        <TextView
            android:id="@+id/alarmtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarmmessage"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>