<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/timer">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="372dp"
        android:layout_height="55dp"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/ToDo"
            android:layout_width="124dp"
            android:layout_height="55dp"
            app:srcCompat="@android:drawable/btn_star" />
        <ImageButton
            android:id="@+id/Calendar"
            android:layout_width="124dp"
            android:layout_height="55dp"
            app:srcCompat="@android:drawable/btn_star" />

        <ImageButton
            android:id="@+id/Timer"
            android:layout_width="124dp"
            android:layout_height="55dp"
            app:srcCompat="@android:drawable/btn_star" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timerselect"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ConstrainLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/stopwatchbutton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/stopwatchicon" />

            <ImageButton
                android:id="@+id/alarmbuttton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:scaleType="centerCrop"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toEndOf="@+id/stopwatchbutton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/alarm" />

            <ImageButton
                android:id="@+id/intervalButton"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="30dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toEndOf="@+id/alarmbuttton"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/interval" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="187dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/stopWatch"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/alarm"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:text="@string/interval"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>